CMAKE_MINIMUM_REQUIRED(VERSION 1.4)

PROJECT (VSP)

SET(CMAKE_PREFIX_PATH
      ${VSP_SOURCE_DIR}/fltk
      ${VSP_SOURCE_DIR}/libxml2
      ${VSP_SOURCE_DIR}/jpeg-8d
      ${VSP_SOURCE_DIR}/jpeg-8d/lib
)

ADD_SUBDIRECTORY( util_code )
ADD_SUBDIRECTORY( triangle )
ADD_SUBDIRECTORY( load_jpg )
ADD_SUBDIRECTORY( xmlvsp )
ADD_SUBDIRECTORY( screens )
ADD_SUBDIRECTORY( sixseries )
ADD_SUBDIRECTORY( vsp_renderer )
ADD_SUBDIRECTORY( vsp )
