CMAKE_MINIMUM_REQUIRED(VERSION 1.4)

SET(RENDER_LIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "Path to RENDER_LIBRARY headers")

INCLUDE_DIRECTORIES( ${VSP_SOURCE_DIR}
	${UTIL_CODE_INCLUDE_DIR}
	${LOAD_JPG_INCLUDE_DIR}
	${XMLVSP_INCLUDE_DIR}
	${JPEG_INCLUDE_DIR}
	${LIBXML2_INCLUDE_DIR} )

ADD_LIBRARY( render_library
	GL11Renderer.cpp
	GLCommon.cpp
	glfont2.cpp
	GLTextureLoader.cpp
	GLVSPFont.cpp )

TARGET_LINK_LIBRARIES(render_library
	util_code
	xmlvsp
	load_jpg )